[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/root/settings_panel.gd" type="Script" id=1]

[node name="SettingsPanel" type="ScrollContainer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -600.0
margin_top = -500.0
margin_right = -15.0
margin_bottom = -94.0
grow_horizontal = 0
theme_type_variation = "Settings"
scroll_horizontal_enabled = false
script = ExtResource( 1 )

[node name="V" type="VBoxContainer" parent="."]
margin_right = 573.0
margin_bottom = 727.0
size_flags_horizontal = 3

[node name="Keybinds" type="VBoxContainer" parent="V"]
margin_left = 218.0
margin_right = 355.0
margin_bottom = 255.0
size_flags_horizontal = 4

[node name="Label" type="Label" parent="V/Keybinds"]
margin_right = 137.0
margin_bottom = 59.0
theme_type_variation = "Keybinds"
text = "Keybinds"
align = 1

[node name="LeftKat" type="HBoxContainer" parent="V/Keybinds"]
margin_top = 63.0
margin_right = 137.0
margin_bottom = 108.0

[node name="Label" type="Label" parent="V/Keybinds/LeftKat"]
margin_top = 3.0
margin_right = 121.0
margin_bottom = 42.0
size_flags_horizontal = 3
text = "Left Kat"

[node name="Button" type="Button" parent="V/Keybinds/LeftKat"]
margin_left = 125.0
margin_right = 137.0
margin_bottom = 45.0

[node name="LeftDon" type="HBoxContainer" parent="V/Keybinds"]
margin_top = 112.0
margin_right = 137.0
margin_bottom = 157.0

[node name="Label" type="Label" parent="V/Keybinds/LeftDon"]
margin_top = 3.0
margin_right = 121.0
margin_bottom = 42.0
size_flags_horizontal = 3
text = "Left Don"

[node name="Button" type="Button" parent="V/Keybinds/LeftDon"]
margin_left = 125.0
margin_right = 137.0
margin_bottom = 45.0

[node name="RightDon" type="HBoxContainer" parent="V/Keybinds"]
margin_top = 161.0
margin_right = 137.0
margin_bottom = 206.0

[node name="Label" type="Label" parent="V/Keybinds/RightDon"]
margin_top = 3.0
margin_right = 121.0
margin_bottom = 42.0
size_flags_horizontal = 3
text = "Right Don"

[node name="Button" type="Button" parent="V/Keybinds/RightDon"]
margin_left = 125.0
margin_right = 137.0
margin_bottom = 45.0

[node name="RightKat" type="HBoxContainer" parent="V/Keybinds"]
margin_top = 210.0
margin_right = 137.0
margin_bottom = 255.0

[node name="Label" type="Label" parent="V/Keybinds/RightKat"]
margin_top = 3.0
margin_right = 121.0
margin_bottom = 42.0
size_flags_horizontal = 3
text = "Right Kat"

[node name="Button" type="Button" parent="V/Keybinds/RightKat"]
margin_left = 125.0
margin_right = 137.0
margin_bottom = 45.0

[node name="Buffer1" type="HSeparator" parent="V"]
margin_left = 211.0
margin_top = 259.0
margin_right = 361.0
margin_bottom = 292.0
rect_min_size = Vector2( 150, 33 )
size_flags_horizontal = 4

[node name="ExtraDisplays" type="VBoxContainer" parent="V"]
margin_left = 178.0
margin_top = 296.0
margin_right = 394.0
margin_bottom = 435.0
size_flags_horizontal = 4

[node name="Label" type="Label" parent="V/ExtraDisplays"]
margin_right = 216.0
margin_bottom = 39.0
text = "Extra Displays"
align = 1

[node name="LateEarly" type="HBoxContainer" parent="V/ExtraDisplays"]
margin_top = 43.0
margin_right = 216.0
margin_bottom = 88.0

[node name="Label" type="Label" parent="V/ExtraDisplays/LateEarly"]
margin_top = 3.0
margin_right = 183.0
margin_bottom = 42.0
size_flags_horizontal = 3
text = "Late/Early Text"

[node name="Options" type="OptionButton" parent="V/ExtraDisplays/LateEarly"]
margin_left = 187.0
margin_right = 216.0
margin_bottom = 45.0

[node name="HitError" type="HBoxContainer" parent="V/ExtraDisplays"]
margin_top = 92.0
margin_right = 216.0
margin_bottom = 139.0

[node name="Label" type="Label" parent="V/ExtraDisplays/HitError"]
margin_top = 4.0
margin_right = 188.0
margin_bottom = 43.0
size_flags_horizontal = 3
text = "Hit Error Bar"

[node name="Toggle" type="CheckBox" parent="V/ExtraDisplays/HitError"]
margin_left = 192.0
margin_right = 216.0
margin_bottom = 47.0

[node name="Resolution" type="VBoxContainer" parent="V"]
margin_left = 185.0
margin_top = 439.0
margin_right = 387.0
margin_bottom = 594.0
size_flags_horizontal = 4

[node name="Label" type="Label" parent="V/Resolution"]
margin_right = 202.0
margin_bottom = 55.0
theme_type_variation = "Resolution"
text = "Resolution (WIP)"
align = 1

[node name="Options" type="OptionButton" parent="V/Resolution"]
margin_left = 86.0
margin_top = 59.0
margin_right = 115.0
margin_bottom = 104.0
size_flags_horizontal = 4

[node name="Fullscreen" type="HBoxContainer" parent="V/Resolution"]
margin_top = 108.0
margin_right = 202.0
margin_bottom = 155.0

[node name="Label" type="Label" parent="V/Resolution/Fullscreen"]
margin_top = 4.0
margin_right = 174.0
margin_bottom = 43.0
size_flags_horizontal = 3
text = "Fullscreen"

[node name="Toggle" type="CheckBox" parent="V/Resolution/Fullscreen"]
margin_left = 178.0
margin_right = 202.0
margin_bottom = 47.0

[node name="Buffer2" type="HSeparator" parent="V"]
margin_left = 211.0
margin_top = 598.0
margin_right = 361.0
margin_bottom = 631.0
rect_min_size = Vector2( 150, 33 )
size_flags_horizontal = 4

[node name="AudioLabel" type="Label" parent="V"]
margin_top = 635.0
margin_right = 573.0
margin_bottom = 674.0
text = "Audio"
align = 1

[node name="Offset" type="HBoxContainer" parent="V"]
margin_left = 208.0
margin_top = 678.0
margin_right = 365.0
margin_bottom = 727.0
size_flags_horizontal = 4

[node name="Label" type="Label" parent="V/Offset"]
margin_top = 5.0
margin_right = 71.0
margin_bottom = 44.0
text = "Offset"

[node name="LineEdit" type="LineEdit" parent="V/Offset"]
margin_left = 75.0
margin_right = 157.0
margin_bottom = 49.0
align = 2
placeholder_text = "0"

[connection signal="pressed" from="V/Keybinds/LeftKat/Button" to="." method="button_pressed" binds= [ "LeftKat" ]]
[connection signal="pressed" from="V/Keybinds/LeftDon/Button" to="." method="button_pressed" binds= [ "LeftDon" ]]
[connection signal="pressed" from="V/Keybinds/RightDon/Button" to="." method="button_pressed" binds= [ "RightDon" ]]
[connection signal="pressed" from="V/Keybinds/RightKat/Button" to="." method="button_pressed" binds= [ "RightKat" ]]
[connection signal="item_selected" from="V/ExtraDisplays/LateEarly/Options" to="." method="late_early"]
[connection signal="toggled" from="V/ExtraDisplays/HitError/Toggle" to="." method="hit_error"]
[connection signal="item_selected" from="V/Resolution/Options" to="." method="change_res"]
[connection signal="toggled" from="V/Resolution/Fullscreen/Toggle" to="." method="toggle_fullscreen"]
[connection signal="text_changed" from="V/Offset/LineEdit" to="." method="change_offset"]
